fix: corrige dominio do xml

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   <meta name="author" content="Padre Kleverton Bezerra" />
   <meta name="robots" content="index, follow" />
   <meta name="google-site-verification" content="U0jhbYnty-chZJBMc4OzkQCQCGVukd99hjuMGHEtCos" />
-  <link rel="canonical" href="https://josephdaparaiba.com.br/" />
+  <link rel="canonical" href="https://joseph-paraiba.vercel.app/" />
 
   <!-- Open Graph (WhatsApp, Facebook, Telegram) -->
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Joseph da Paraíba — Testemunho de Santidade" />
   <meta property="og:description"
     content="De ateu convicto à santidade: o testemunho de Joseph da Paraíba, narrado pelo Padre Kleverton Bezerra. Milagre da Eucaristia, oblação e morte em odor de santidade." />
-  <meta property="og:url" content="https://josephdaparaiba.com.br/" />
-  <meta property="og:image" content="https://josephdaparaiba.com.br/foto 01.png" />
+  <meta property="og:url" content="https://joseph-paraiba.vercel.app/" />
+  <meta property="og:image" content="https://joseph-paraiba.vercel.app/foto 01.png" />
   <meta property="og:image:alt" content="Joseph da Paraíba — Testemunho de Santidade" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -40,7 +40,7 @@
   <meta name="twitter:title" content="Joseph da Paraíba — Testemunho de Santidade" />
   <meta name="twitter:description"
     content="De ateu a santo: o testemunho impressionante de Joseph da Paraíba narrado pelo Padre Kleverton Bezerra." />
-  <meta name="twitter:image" content="https://josephdaparaiba.com.br/foto 01.png" />
+  <meta name="twitter:image" content="https://joseph-paraiba.vercel.app/foto 01.png" />
 
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -61,7 +61,7 @@
       "@graph": [
         {
           "@type": "Person",
-          "@id": "https://josephdaparaiba.com.br/#joseph",
+          "@id": "https://joseph-paraiba.vercel.app/#joseph",
           "name": "Joseph da Paraíba",
           "alternateName": "São Joseph da Paraíba",
           "description": "Jovem paraibano, mestre em Filosofia (Nietzsche), convertido ao catolicismo durante a pandemia após ser ateu convicto. Faleceu em odor de santidade em João Pessoa, Paraíba, na primeira quarta-feira de fevereiro, dia consagrado a São José.",
@@ -84,13 +84,13 @@
         },
         {
           "@type": "Article",
-          "@id": "https://josephdaparaiba.com.br/#article",
+          "@id": "https://joseph-paraiba.vercel.app/#article",
           "headline": "Joseph da Paraíba — Testemunho de Santidade",
           "alternativeHeadline": "De ateu niilista à santidade: a vida e morte de Joseph da Paraíba",
           "description": "Homilia do Padre Kleverton Bezerra sobre a vida e morte de Joseph da Paraíba. O jovem filósofo, ex-ateu e estudioso de Nietzsche, converteu-se ao catolicismo durante a pandemia. Diagnosticado com câncer terminal, viveu três dimensões de santidade: eucarística, oblativa e de união a Cristo. Faleceu em odor de santidade, sendo testemunhado um milagre da Eucaristia.",
           "image": {
             "@type": "ImageObject",
-            "url": "https://josephdaparaiba.com.br/foto 01.png",
+            "url": "https://joseph-paraiba.vercel.app/foto 01.png",
             "description": "Joseph da Paraíba"
           },
           "author": {
@@ -110,17 +110,17 @@
             "name": "Comunidade Doce Mãe de Deus",
             "logo": {
               "@type": "ImageObject",
-              "url": "https://josephdaparaiba.com.br/vite.svg"
+              "url": "https://joseph-paraiba.vercel.app/vite.svg"
             }
           },
           "about": {
-            "@id": "https://josephdaparaiba.com.br/#joseph"
+            "@id": "https://joseph-paraiba.vercel.app/#joseph"
           },
           "keywords": "Joseph da Paraíba, testemunho, santidade, eucaristia, milagre, conversão, Padre Kleverton Bezerra, Comunidade Doce Mãe de Deus, câncer terminal, oblação, morte em odor de santidade",
           "inLanguage": "pt-BR",
           "mainEntityOfPage": {
             "@type": "WebPage",
-            "@id": "https://josephdaparaiba.com.br/"
+            "@id": "https://joseph-paraiba.vercel.app/"
           },
           "datePublished": "2023-03-01",
           "articleSection": "Testemunho de Fé",
