chore: atualiza para Joseph Anderson

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <!-- Twitter / X Cards -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Joseph da Paraíba — Testemunho de Santidade" />
+  <meta name="twitter:title" content="Joseph Anderson — Testemunho de Santidade" />
   <meta name="twitter:description"
     content="De ateu a santo: o testemunho impressionante de Joseph da Paraíba narrado pelo Padre Kleverton Bezerra." />
   <meta name="twitter:image" content="https://joseph-paraiba.vercel.app/foto 01.png" />
