chore: coloca favicon de Joseph

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <meta name="twitter:image" content="https://joseph-anderson.vercel.app/foto 01.png" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
 
   <!-- Preconnect para performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -110,7 +110,7 @@
             "name": "Comunidade Doce Mãe de Deus",
             "logo": {
               "@type": "ImageObject",
-              "url": "https://joseph-anderson.vercel.app/vite.svg"
+              "url": "https://joseph-anderson.vercel.app/favicon.png"
             }
           },
           "about": {
@@ -134,7 +134,8 @@
   <noscript>
     <article>
       <h1>Joseph Anderson — Testemunho de Santidade</h1>
-      <p>Testemunho do Padre Kleverton Bezerra, da Comunidade Doce Mãe de Deus, sobre a vida e morte de Joseph Anderson.</p>
+      <p>Testemunho do Padre Kleverton Bezerra, da Comunidade Doce Mãe de Deus, sobre a vida e morte de Joseph Anderson.
+      </p>
       <p>Joseph era ateu convicto, mestre em Filosofia com dissertação sobre Nietzsche. Durante a pandemia, converteu-se
         ao catolicismo após buscar a verdade. Diagnosticado com câncer no estômago, viveu três dimensões de santidade:
         eucarística, oblativa e de união a Jesus Cristo.</p>
